# orchestra-blueprints

./: .gitignore  .gitleaks.toml  .yamllint  CLEANUP_PLAN.md  Makefile  README.md  ingest_raw_data.py  orchestra ksk.yml
.azure/: register-orchestra-pipelines.yml
.cursor/: .cursorrules
dbt_projects/clickhouse/: .gitignore  README.md  dbt_project.yml  packages.yml  pyproject.toml
dbt_projects/clickhouse/models/: integration_testing_data.sql  schema.yml  sources.yml
dbt_projects/clickhouse/models/marts/dimensions/: dim_assets.sql  dim_integrations.sql  dim_pipelines.sql  schema.yml
dbt_projects/clickhouse/models/marts/facts/: fct_operations.sql  fct_pipeline_runs.sql  fct_task_runs.sql  schema.yml
dbt_projects/clickhouse/models/staging/: schema.yml  stg_orchestra__assets.sql  stg_orchestra__operations.sql  stg_orchestra__pipeline_runs.sql  stg_orchestra__task_runs.sql
dbt_projects/clickhouse/sources/: sources.yml
dbt_projects/motherduck_oil/: .gitignore  README.md  dbt_project.yml  profiles.yml.example  pyproject.toml
dbt_projects/motherduck_oil/models/aggregated/: oil_data_aggregated.sql  schema.yml
dbt_projects/motherduck_oil/models/clean/: oil_data_clean.sql  schema.yml
dbt_projects/motherduck_oil/models/staging/: oil_production_staging.sql  schema.yml
dbt_projects/motherduck_oil/sources/: sources.yml
dbt_projects/motherduck_s3_poetry/: .gitignore  loader.sql  pyproject.toml  readme.md
dbt_projects/motherduck_s3_poetry/models/motherduck/aggregated/: events_per_day.sql  logins_per_day.sql
dbt_projects/motherduck_s3_poetry/sources/: raw.yml
(+491 files in other folders)
