[project]
name = "orchestra-metadata-clickhouse"
version = "1.0.0"
description = "dbt project for Orchestra metadata analytics in ClickHouse"
authors = [{name = "Orchestra", email = "support@getorchestra.io"}]
requires-python = ">=3.9"

dependencies = [
    "dbt-clickhouse>=1.7.0",
    "dbt-utils>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "sqlfluff>=2.0.0",
    "dbt-project-evaluator>=1.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
